# AI-Reasoning-Assistant

./: Dockerfile  README.md  pyproject.toml  templates.py
config/: config.yaml
docker/: Dockerfile.api  Dockerfile.app  docker-compose.yml
notebooks/: experimentation.ipynb
src/ai_reasoning_assistant/agents/: analyzer_agent.py  evaluator_agent.py  orchestrator_agent.py  retriever_agent.py  summarizer_agent.py
src/ai_reasoning_assistant/api/: main.py
src/ai_reasoning_assistant/api/routes/: feedback_route.py  metrics_route.py  query_route.py
src/ai_reasoning_assistant/api/utils/: database.py
src/ai_reasoning_assistant/app/: streamlit_app.py
src/ai_reasoning_assistant/core/: embedder.py  logger.py  prompt_templates.py  rag_pipeline.py
src/ai_reasoning_assistant/monitoring/: mlflow_tracking.py
